Log of changes:	gfm (calcs, files, ticonv)

- 14/10/2007, version 1.02 (1.0.8, 1.0.8, 1.0.5): roms
	* fixed KDE file selector support (needed autoheader rerun) (kevin)
	* removed old GTK file selector because being deprecated with GTK+ 2.12 (kevin)
	* fixed dirname+filename concatenation for KDE file selector (kevin)
	* fixed missing include flags causing KDE file selector code to fail to compile (kevin)
	* fixed build with --disable-nls (kevin)
	* fixed undefined reference to splash_screen_set_label with KDE file selector (kevin)

- 24/09/2007, version 1.01 (1.0.8, 1.0.8, 1.0.5): roms
	* Fixed ungrouping error.
	* Uninstall software before installation (TiLP framework).
	* Added support for KDE file dialogs (kevin).
	* Made configure strip -s from CFLAGS on OS X (kevin).
	* Removed -I$(top_srcdir)/intl because said directory no longer exists (kevin).

- 10/06/2007, version 1.00 (1.0.7, 1.0.7, 1.0.3): roms
	* Decided to make the GUI easier: more or less developped from scratch.
	Most of code taken from Tyler Cassidy's original GFM.
	Some parts taken from TiLP (file, vars, ctree).

2006-08-20  Tyler Cassidy  <tyler@tylerc.org>

	* GFM: initial version (0.03).
