@@ -7,6 +7,7 @@ Log of changes:	gfm (calcs, files, ticonv)
 	* fixed missing include flags causing KDE file selector code to fail to compile (kevin)
 	* fixed build with --disable-nls (kevin)
 	* fixed undefined reference to splash_screen_set_label with KDE file selector (kevin)
+	* added support for the alternate (KDE/M$) button order (kevin)
 
 - 24/09/2007, version 1.01 (1.0.8, 1.0.8, 1.0.5): roms
 	* Fixed ungrouping error.
